# test_task

./: README.md  entrypoint.sh  pyproject.toml
src/: main.py  routers.py
src/basket/: db.py  dtos.py  exceptions.py  models.py  services.py
src/basket/routers/: __init__.py  router.py  scheme.py
src/core/: init_app.py
src/mushrooms/: db.py  dtos.py  exceptions.py  models.py  services.py
src/mushrooms/routers/: __init__.py  router.py  scheme.py
