[tool.poetry]
name = "mushrooms"
version = "0.1.0"
description = ""
authors = ["Ivan <BaHbka35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
fastapi = "^0.115.11"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
